--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "7winds",
+  "name": "search-git_hub-repo",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
