--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@tanstack/react-table": "^8.20.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.1.0",
